*Gestion forum (- Création d'un nouveau forum                  - Liste des forums existants                  - Récupération des détails d'un forum via id ou le Slug)